# Cryptography-Application

./: .gitignore  BUILD_ENHANCEMENTS.md  BUILD_PLAN.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build-windows.ps1  build.sh  config.json  test_file.txt  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_issue.md
.github/workflows/: ci.yml
include/common/: types.h
include/cryptography/: aes_crypto.h  blowfish_crypto.h  digital_signature.h  hash_functions.h  rsa_crypto.h
include/gui/: decryption_dialog.h  encryption_dialog.h  main_window.h  signature_dialog.h
include/storage/: secure_storage.h
include/utils/: file_manager.h  key_generator.h
src/: main.cpp
src/cryptography/: aes_crypto.cpp  blowfish_crypto.cpp  digital_signature.cpp  hash_functions.cpp  rsa_crypto.cpp
src/gui/: decryption_dialog.cpp  encryption_dialog.cpp  main_window.cpp  signature_dialog.cpp
src/storage/: secure_storage.cpp
src/utils/: file_manager.cpp  key_generator.cpp
vm-testing/: README.md
vm-testing/phase1-unit-tests/: README.md  run_tests.ps1  run_tests.sh
vm-testing/phase2-integration-tests/: README.md  run_tests.ps1  run_tests.sh
vm-testing/phase3-security-tests/: README.md  run_tests.ps1  run_tests.sh
vm-testing/phase4-performance-tests/: README.md  run_tests.ps1  run_tests.sh
vm-testing/phase5-platform-tests/: README.md  run_tests.ps1  run_tests.sh
